2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/28_convFloatFloat.deca
// Description:
//    Programme : conv float float
// Resultats:
//      Programme correcte 
//
// Historique:
//    cree le 18/01/2024
{
    float y = 0x9.0p-1;
    float x = (float)(y);
}