2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/11_ElseSeul.deca
// Description:
//    tests de programme else seul
//
// Resultats:
//    ligne 11  : Erreur,  mismatched input 'else'
//
// Historique:
//    cree le 09/01/2024
{ 
    int x;
    else{
        print("hello world");
    }
    
}